--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,6 +16,10 @@ baseurl = "/"
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 copyright = ""
 
+
+# Where to save the "compiled" content
+publishDir = "docs"
+
 ############################
 ## Advanced options below ##
 ############################
