--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,17 +14,17 @@
   weight = 20
 
 [[main]]
-  name = "Projects"
+  name = "Meine Leistungen"
   url = "#projects"
   weight = 30
 
 [[main]]
-  name = "Publications"
+  name = "Publikationen"
   url = "#featured"
   weight = 40
 
 [[main]]
-  name = "Contact"
+  name = "Kontakt"
   url = "#contact"
   weight = 60
 
